opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvain+ocaml@le-gall.net>"
authors: [ "Sylvain Le Gall" ]
homepage: "https://github.com/ocaml/forge-dump-tools"
license: "LGPL-2.1 with OCaml linking exception"
dev-repo: "git+https://github.com/ocaml/forge-dump-tools.git"
bug-reports: "https://github.com/ocaml/forge-dump-tools/issues"
doc: "https://gildor478.github.io/forge-dump-tools/"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>= "4.03"}
  "base-unix"
  "base-bytes"
  "stdlib-shims"
  "atdgen"
  "yojson"
  "biniou"
  "camlzip"
  "batteries"
  "github"
  "github-unix"
  "calendar"
  "lwt"
  "ocamlnet"
  "dune" {>= "1.11.0"}
  "ounit" {with-test & >= "2.0.0"}
]
synopsis: "API and tools to migrate data dump from forge.ocamlcore.org"
description: """
* Library to read the .zip files dumped from the forge.ocamlcore.org.
* Migrate bugs, features requests and patches from the .zip file and create
  Github Issues.
"""
